--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
     <div class="social-links text-center">
     
-      <a href="https://www.linkedin.com/in/harsh-mali-ba79741b4/" class="linkedin"><i class="bi bi-linkedin"></i></a>
-      <a href="https://github.com/Harsh20014060?tab=repositories" class="github"><i class="bi bi-github"></i></a>
-      <a href="https://medium.com/@sainiharsh754" class="medium"><i class="bi bi-medium"></i></a>
-      <a href="https://stackoverflow.com/users/23564799/harsh-mali" class="stackoverflow"><i class="bi bi-stack-overflow"></i></a>
+      <a href="https://www.linkedin.com/in/harsh-mali-ba79741b4/" target="_blank" class="linkedin"><i class="bi bi-linkedin"></i></a>
+      <a href="https://github.com/Harsh20014060?tab=repositories" target="_blank" class="github"><i class="bi bi-github"></i></a>
+      <a href="https://medium.com/@sainiharsh754" target="_blank" class="medium"><i class="bi bi-medium"></i></a>
+      <a href="https://stackoverflow.com/users/23564799/harsh-mali" target="_blank" class="stackoverflow"><i class="bi bi-stack-overflow"></i></a>
     </div>
 
     <nav id="navmenu" class="navmenu">
@@ -1208,8 +1208,8 @@
           </div>
 
           <div class="col-lg-7">
-            <!-- <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">-->
-              <form id="contact-form" class="php-email-form" data-aos="fade-up" data-aos-delay="200" onsubmit="sendEmail(event)">
+            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
+              <!-- <form id="contact-form" class="php-email-form" data-aos="fade-up" data-aos-delay="200" onsubmit="sendEmail(event)"> -->
 
               
               <div class="row gy-4">
