--- a/index.html
+++ b/index.html
@@ -1208,8 +1208,8 @@
           </div>
 
           <div class="col-lg-7">
-            <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200">
-              <!-- <form id="contact-form" class="php-email-form" data-aos="fade-up" data-aos-delay="200" onsubmit="sendEmail(event)"> -->
+            <!-- <form action="forms/contact.php" method="post" class="php-email-form" data-aos="fade-up" data-aos-delay="200"> -->
+              <form id="contact-form" class="php-email-form" data-aos="fade-up" data-aos-delay="200" onsubmit="sendEmail(event)">
 
               
               <div class="row gy-4">
