Update Resume link

--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
               </div>
 
               <div >
-                <a href="https://drive.google.com/file/d/10sPNuRPylNQld92E7ccuKp9_-wyMqRnd/view?usp=sharing" target="_blank" class="general-button" >View Resume</a>
+                <a href="https://bit.ly/3AYmo8g" target="_blank" class="general-button" >View Resume</a>
               </div>
            
               
