update companies and skills

--- a/index.html
+++ b/index.html
@@ -602,7 +602,7 @@
 
           <div data-aos="fade-up" data-aos-delay="200">
 
-            <div class="resume-item">
+            <!-- <div class="resume-item">
               <h4>Android Developer</h4>
               <h5>Feb, 2023 - Present</h5>
               <p><em>codExalters Techlabs, Ahmedabad, Gujarat, IND </em></p>
@@ -617,7 +617,8 @@
                   Unity games, and managed version control with Git, resulting in a 15% increase in app downloads or
                   user retention.</li>
               </ul>
-            </div><!-- Edn Resume Item -->
+            </div> -->
+            <!-- Edn Resume Item -->
 
             <!-- <div class="resume-item">
               <h4>Android Developer</h4>
@@ -634,18 +635,16 @@
             </div -->
             <!-- > -->
             <!-- Edn Resume Item -->
-
+           
             <div class="resume-item">
               <h4>Android Developer</h4>
-              <h5>May 2021 - Dec 2022</h5>
+              <h5>May 2021 - Sep 2024</h5>
               <p><em>Shriniwasa Engineering, Jaipur, Rajasthan, IND</em></p>
               <ul>
-                <li><b style="color:#00f05e;">Architecture & Development: </b>mplemented MVVM architecture using Java and Kotlin, improving code structure and testability by 12%.</li>
-                <!-- <li><b style="color:#00f05e;">Architecture: </b>Implemented MVVM architecture, enhancing code structure
-                  and testability by 12%.</li> -->
-                <li><b style="color:#00f05e;">Team Collaboration: </b>Collaborated with cross-functional teams, achieving a 36% on-time project completion rate.</li>
-                <li><b style="color:#00f05e;">Innovation: </b>Introduced new technologies, increasing innovative app features by 20%.</li>
-                <li><b style="color:#00f05e;">Problem-Solving: </b>Delivered 90% of projects successfully within tight deadlines through effective problem-solving and resource management.                </li>
+                <li>Implemented <b style="color:#00f05e;">MVVM architecture, LiveData, Room DB, REST APIs,</b> and <b style="color:#00f05e;">Firebase</b> to boost data efficiency by <b style="color:#00f05e;">70%</b>, enhancing user experience with <b style="color:#00f05e;">third-party libraries</b> and payment gateways, leading to a <b style="color:#00f05e;">27%</b> engagement increase.</li>
+                <li>Leveraged <b style="color:#00f05e;">WorkManager, ViewBinding,</b> and <b style="color:#00f05e;">Coroutines</b> for <b style="color:#00f05e;">80%</b> task efficiency, optimized app presence and it leads to <b style="color:#00f05e;">15%</b> rise in downloads or retention. Along with this i worked on <b style="color:#00f05e;">Unity integration</b> and <b style="color:#00f05e;">Git version control</b></li>
+                <li>Gained hands-on experience in Android development and mastering Android Studio to build user-friendly applications and implement advanced features like <b style="color:#00f05e;">real-time data synchronization</b> and <b style="color:#00f05e;">custom animations.</b></li>
+                <li>Developed a deep understanding of Android architecture and project structure, while demonstrating proficiency in Kotlin for high-quality app performance.</li>
               </ul>
             </div><!-- Edn Resume Item -->
 
